# worldcuppointscalculator

./: .gitignore  README.md  config.py  fixtures.json  pyproject.toml  setup.py
app/: constants.py  fetch_data.py
app/model/: request_models.py
